--- a/game.html
+++ b/game.html
@@ -32,7 +32,7 @@ function preload(){
   sfx.jump = loadSound("assets/jump.wav");
   sfx.shoot = loadSound("assets/shoot.wav");
   sfx.hit = loadSound("assets/hit.wav");
-  sfx.explosion = loadSound("assets/explosion.wav");
+  sfx.explosion = loadSound("assets/explosion.mp3");
   sfx.powerup = loadSound("assets/powerup.wav");
   music = loadSound("assets/music.mp3");
 }
