--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
   <title>Glide Warrior HD Pixel Edition</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
   <script src="sprites.js"></script>
   <style>
     html,body { margin:0; background:#000; overflow:hidden; }
